ci: Add unit testing workflow and update .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ Dockerfile             export-ignore
 infection.*            export-ignore
 tests                  export-ignore
 docs                   export-ignore
+resources              export-ignore
